improving html output layout

--- a/lib/template.handlebars
+++ b/lib/template.handlebars
@@ -9,6 +9,7 @@
 		h2 {font: 400 32px/46px "open sans"; margin: 0px 0px 35px 0px}
 		h3 {font: 100 14px/33px "open sans"; margin:0px}
 		footer p {font: 200 18px/24px "open sans"; margin:10px}
+		img {width:100%}
 		.images .image {cursor: pointer}
 		.images .image, .images .image-diff {display:inline-block; max-width: 49%}
 	</style>
