changing jenkins template

--- a/lib/template.handlebars
+++ b/lib/template.handlebars
@@ -15,7 +15,7 @@
 </head>
 <body>
 <h1>Automated Screenshot Diff</h1>
-<h2>Analysis comparing <strong>{{previousRelease}}</strong> with <strong>{{currentRelease}}</strong></h2>
+<h2>Analyzing differences between <strong>{{previousRelease}}</strong> and <strong>{{currentRelease}}</strong></h2>
 
 {{#files}}
 <div class="images">
@@ -31,7 +31,7 @@
 {{/files}}
 
 <footer>
-	<p>The <a href="https://github.com/igorescobar/automated-screenshot-diff">automated-screenshot-diff</a> was written by <a href="http://www.igorescobar.com/" rel="author" target="_blank">Igor Escobar</a> and the source-code's available in <a href="https://github.com/igorescobar/automated-screenshot-diff" target="_blank">GitHub</a>.</p>
+	<p>The <a href="https://github.com/igorescobar/automated-screenshot-diff">automated-screenshot-diff</a> was written by <a href="http://www.igorescobar.com/" rel="author" target="_blank">Igor Escobar</a> and the source-code is available at <a href="https://github.com/igorescobar/automated-screenshot-diff" target="_blank">GitHub</a>.</p>
 </footer>
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" type="text/css">
